Replace G1GC to ZGC